@@ -12,17 +12,23 @@ import java.awt.geom.Point2D;
 public class PrecipitateParticle {
 
     private final Point2D location; // location of the particle in the coordinate frame of the beaker
+    private final double orientation; // rotation angle, in radians
     private final Color color;
     private final double size;
 
-    public PrecipitateParticle( Point2D location, Color color, double size ) {
+    public PrecipitateParticle( Point2D location, double orientation, Color color, double size ) {
         this.location = location;
+        this.orientation = orientation;
         this.color = color;
         this.size = size;
     }
 
     public Point2D getLocation() {
         return new Point2D.Double( location.getX(), location.getY() );
+    }
+
+    public double getOrientation() {
+        return orientation;
     }
 
     public Color getColor() {
