@@ -1,3 +1,4 @@
+1/10/12 move precipitate particle orientation into model
 1/10/12 make precipitate particles sit precisely on bottom of beaker
 1/10/12 change min colors for K2CrO4 (RGB=255,255,199) and KMnO4 (RGB=255,0,255)
 1/10/12 enable dropper when amount of solute is reduced below max
